--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -140,7 +140,7 @@ ul.social li .fa-google-plus:hover {
 
 .header {
 	text-align:center;
-    margin-top: 50px;
+    margin-top: ;
 }
 .banner-dott{
     background: url(../images/dott.png)repeat 0px 0px;
@@ -329,9 +329,9 @@ input[type="submit"] {
     border: none;
     color: #fff;
     font-size: 2em;
-	margin-top: 0px;
     letter-spacing: 1px;
 	text-transform: uppercase;
+	
     display: inline;
     padding: 15px 18px;
     padding: 15px 50px 15px 55px;
@@ -339,7 +339,7 @@ input[type="submit"] {
 	opacity: 0.80;
     cursor: pointer;
     outline: none;
-    width: 20%;
+    width: 30%;
     vertical-align: middle;
     font-family: 'azonix', sans-serif;
 	-webkit-transition: all 0.5s;
