--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -6,7 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<title>Wonder Coming Soon Flat Responsive Widget Template :: w3layouts</title>
+<title>ESCAPE-C</title>
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
