--- a/template/pwa/css/styl.css
+++ b/template/pwa/css/styl.css
@@ -140,7 +140,6 @@ ul.social li .fa-google-plus:hover {
 
 .header {
 	text-align:center;
-
 }
 .banner-dott{
     background: url(../images/dott.png)repeat 0px 0px;
@@ -153,7 +152,7 @@ ul.social li .fa-google-plus:hover {
 }
 .header h1 {
     color: #EAEAEA;
-    font-size: 60px;
+    font-size: 350%;
     font-weight: 300;
     text-transform: uppercase;
     word-spacing: 10px;
@@ -309,42 +308,8 @@ button span:hover {
 opacity: 0;
 top: 20px;
 }
-input[type="button"] {
-    border: none;
-    color: #fff;
-	font-size: 2vw;
-	text-align: center;
-    letter-spacing: 1px;
-	text-transform: uppercase;
-	
-    display: inline;
-    padding: 15px 18px;
-	padding: 15px 50px 15px 55px;
-	border-radius: 10px;
-	border: black 3px solid;
-	background: #713B95 ;
-	opacity: 0.95;
-    cursor: pointer;
-	width: 20%;
-    vertical-align: middle;
-    font-family: 'azonix', sans-serif;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
-	transition: all 0.5s;
-	margin-left: 3%;
-	margin-right: 3%;
-	margin-top: 7%;
-}
-input[type="button"]:hover{
-	background: #E10F8E;
-	width: 18%;
-	margin-left: 4%;
-	margin-right: 4%;
-}
 input[type="text"] {
-	border: none;
-	box-shadow: 0 0 0.2em #000000, 0 0 0.2em #000000,
-	0 0 0.2em #000000;
+    border: none;
     color: rgb(0, 0, 0);
 	font-size: 2em;
 	text-align: center;
@@ -356,36 +321,33 @@ input[type="text"] {
     outline: none;
     width: 50%;
 	margin-bottom:20px;
+	margin-top:10px;
     vertical-align: middle;
     font-family: 'azonix', sans-serif;
 }
 input[type="submit"] {
-	border: none;
-	border-radius: 10px;
+    border: none;
     color: #fff;
-	font-size: 2vw;
-	text-align: center;
+    font-size: 2em;
     letter-spacing: 1px;
 	text-transform: uppercase;
 	
     display: inline;
     padding: 15px 18px;
-	padding: 15px 50px 15px 55px;
-
-	background: #713B95 ;
-	opacity: 0.95;
+    padding: 15px 50px 15px 55px;
+	background: #713B95;
+	opacity: 0.80;
     cursor: pointer;
-	width: 30%;
+    outline: none;
+    width: 30%;
     vertical-align: middle;
     font-family: 'azonix', sans-serif;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 	transition: all 0.5s;
-	
 }
 input[type="submit"]:hover{
 	background: #E10F8E;
-	width: 28%;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
