--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -44,14 +44,16 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 				
 				<div class="header">
-					<img src="images/marker-blanc.png" alt="" height="20%" width="20%" />
+					<img src="images/marker-blanc.png" alt="" height="19%" width="19%" />
 					<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1>
-					<form action="#" method="post">
+					
+					<form action="pages/choix.html" method="post">
 						<input type="text" id="name" name="user_name">
 						<br>
-						<input type="Submit" value="Valider">
+						
 					</form>
 				</div>
+				<input type="Submit" value="Valider">
 			</div>
         </div>
    </div>
