--- a/template/pwa/pages/choix.html
+++ b/template/pwa/pages/choix.html
@@ -41,7 +41,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 				
 				<div class="header">
-					<h1>SELECTIONER VOTRE LIEU DE DEPART</h1>
+					<h1>SELECTIONNER VOTRE LIEU DE DEPART</h1>
 					
 					<a href="../index.html"><input type="button" value="PARIS 1"></a>
 					<a href="../index.html"><input type="button" value="PARIS 2"></a>
