--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -44,7 +44,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 				
 				<div class="header">
-					<img src="images/marker-blanc.png" alt="" height="19%" width="19%" />
+					<img src="images/marker-blanc.png" alt=""  width="19%" />
 					<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1>
 					
 					<form action="pages/choix.html" method="post">
