--- a/template/pwa/pages/choix.html
+++ b/template/pwa/pages/choix.html
@@ -32,7 +32,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 <!-- main -->
 <div class="w3ls-header">
-	  <div class="bg agile">
+	  <div class="bg-agile">
      	<div class="container">
 			<div class="main">
 				<div class="logo-header">
