--- a/template/pwa/pages/loc.html
+++ b/template/pwa/pages/loc.html
@@ -3,19 +3,12 @@
   <head>
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="../css/css_map.css" type="text/css" media="all" /> <!-- Style-CSS -->
     <meta charset="utf-8">
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
+     
     </style>
   </head>
   <body>
@@ -41,6 +34,13 @@
               lng: position.coords.longitude
             };
 
+        var marker = new google.maps.Marker({
+          position: pos,
+          map: map,
+          title: 'Hello World!',
+          
+        });
+
             infoWindow.setPosition(pos);
             infoWindow.setContent('Location found.');
             infoWindow.open(map);
@@ -48,6 +48,7 @@
           }, function() {
             handleLocationError(true, infoWindow, map.getCenter());
           });
+    
         } else {
           // Browser doesn't support Geolocation
           handleLocationError(false, infoWindow, map.getCenter());
