--- a/template/pwa/css/css_map.css
+++ b/template/pwa/css/css_map.css
@@ -26,7 +26,7 @@ a{text-decoration:none;}
 img{max-width:100%;}
 /*end reset*/
 
-body{
+body,html{
 	background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -36,7 +36,9 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	padding:0;
 	margin:0; 
-	font-size: 100%;
+    font-size: 100%;
+    height: 100%;
+    display: flex; flex-direction: column; min-height: 100vh;
 }  
  @font-face {
    font-family: 'azonix';
@@ -130,8 +132,9 @@ body {
 }
 
 #map {
-    height: 100%;
+    
     background-color: yellow;
+    flex-grow: 1;
   }
 
 h1 {
