--- a/template/pwa/pages/choix.html
+++ b/template/pwa/pages/choix.html
@@ -31,9 +31,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <body>
 
 <!-- main -->
-<div class="w3ls-header">
-	  <div class="bg-agile">
-     	<div class="container">
+
 			<div class="main">
 				<div class="logo-header">
 					
@@ -43,22 +41,20 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<div class="header">
 					<h1>SELECTIONNER VOTRE LIEU DE DEPART</h1>
 					
-					<a href="../index.html"><input type="button" value="PARIS 1"></a>
-					<a href="../index.html"><input type="button" value="PARIS 2"></a>
-					<a href="../index.html"><input type="button" value="PARIS 3"></a>
+					<a href="../map.html"><input type="button" value="PARIS 1"></a>
+					<a href="../map.html"><input type="button" value="PARIS 2"></a>
+					<a href="../map.html"><input type="button" value="PARIS 3"></a>
 					<br>
-					<a href="../index.html"><input type="button" value="PARIS 4"></a>
-					<a href="../index.html"><input type="button" value="PARIS 5"></a>
-					<a href="../index.html"><input type="button" value="PARIS 6"></a>
+					<a href="../map.html"><input type="button" value="PARIS 4"></a>
+					<a href="../map.html"><input type="button" value="PARIS 5"></a>
+					<a href="../map.html"><input type="button" value="PARIS 6"></a>
 					<br>
-					<a href="../index.html"><input type="button" value="PARIS 7"></a>
-					<a href="../index.html"><input type="button" value="PARIS 8"></a>
-					<a href="../index.html"><input type="button" value="PARIS 9"></a>
+					<a href="../map.html"><input type="button" value="PARIS 7"></a>
+					<a href="../map.html"><input type="button" value="PARIS 8"></a>
+					<a href="../map.html"><input type="button" value="PARIS 9"></a>
 				</div>
 			</div>
-        </div>
-   </div>
-</div>
+   
 <!-- //main-->
 
 <!-- js -->
