--- a/template/pwa/pages/choix.html
+++ b/template/pwa/pages/choix.html
@@ -22,6 +22,19 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <link rel="stylesheet" href="/s/jquery.countdown.css" /><!-- //countdown css -->
 <!-- //css files -->
 
+<link rel="manifest" href="../manifest.json">
+<meta name="theme-color" content="white"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="icon" href="favicon.ico" type="image/x-icon" />
+<link rel="apple-touch-icon" href="../images/hello-icon-152.png">
+<meta name="theme-color" content="white"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Hello World">
+<meta name="msapplication-TileImage" content="../images/hello-icon-144.png">
+<meta name="msapplication-TileColor" content="#FFFFFF">
+
 <!-- google fonts -->
 <link href="//fonts.googleapis.com/css?family=Cinzel:400,700,900&amp;subset=latin-ext" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
@@ -60,7 +73,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- js -->
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 <!-- //js -->
-
+<script src="../js/main.js"></script>
 
 
 
