--- a/template/pwa/pages/loc.html
+++ b/template/pwa/pages/loc.html
@@ -14,10 +14,6 @@
   <body>
     <div id="map"></div>
     <script>
-      // Note: This example requires that you consent to location sharing when
-      // prompted by your browser. If you see the error "The Geolocation service
-      // failed.", it means you probably did not give permission for the browser to
-      // locate you.
       var map, infoWindow;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
@@ -66,5 +62,6 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvgE12Re3UeundWgP23srDEVh-WrUs3bM&callback=initMap">
     </script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
