--- a/template/pwa/pages/choix.html
+++ b/template/pwa/pages/choix.html
@@ -54,17 +54,17 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<div class="header">
 					<h1>SELECTIONNER VOTRE LIEU DE DEPART</h1>
 					
-					<a href="../map.html"><input type="button" value="PARIS 1"></a>
-					<a href="../map.html"><input type="button" value="PARIS 2"></a>
-					<a href="../map.html"><input type="button" value="PARIS 3"></a>
+					<a href="map.html"><input type="button" value="PARIS 1"></a>
+					<a href="map.html"><input type="button" value="PARIS 2"></a>
+					<a href="map.html"><input type="button" value="PARIS 3"></a>
 					<br>
-					<a href="../map.html"><input type="button" value="PARIS 4"></a>
-					<a href="../map.html"><input type="button" value="PARIS 5"></a>
-					<a href="../map.html"><input type="button" value="PARIS 6"></a>
+					<a href="map.html"><input type="button" value="PARIS 4"></a>
+					<a href="map.html"><input type="button" value="PARIS 5"></a>
+					<a href="map.html"><input type="button" value="PARIS 6"></a>
 					<br>
-					<a href="../map.html"><input type="button" value="PARIS 7"></a>
-					<a href="../map.html"><input type="button" value="PARIS 8"></a>
-					<a href="../map.html"><input type="button" value="PARIS 9"></a>
+					<a href="map.html"><input type="button" value="PARIS 7"></a>
+					<a href="map.html"><input type="button" value="PARIS 8"></a>
+					<a href="map.html"><input type="button" value="PARIS 9"></a>
 				</div>
 			</div>
    
