--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -28,13 +28,9 @@ nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
 
-	@media only screen and (orientation: portrait) and (max-width: 100%) {
-		html {
-	  transform: rotate(90deg);
-	  width: calc(100%);
-	 
-	}
-  }
+
+
+	
 body,html{
 	background-attachment: fixed;
     background-position: center;
@@ -88,6 +84,22 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
 }
+
+@media screen and (min-width: 0px) and (max-width: 767px) and (orientation: portrait) {
+	body {
+	  transform: rotate(-90deg);
+	  transform-origin: left top;
+	  width: 150%;
+	  height: 100%;
+	  overflow-x: hidden;
+	  position: absolute;
+	  top: 100%;
+	  left: 0;
+	  background-image: url("../images/Escape_90d.jpg");
+	}
+  }
+
+
 .main{
 	
 	flex-grow: 1;
