--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -97,7 +97,7 @@ body {
 	  top: 100%;
 	  left: 0;
 	  background-image: url("../images/Escape_90d.jpg");
-	  background-size: cover;
+	  background-size: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
 	-o-background-size: cover;
