--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -91,6 +91,7 @@ body {
 	  transform: rotate(-90deg);
 	  transform-origin: left top;
 	  width: 150%;
+	  height: 100%;
 	  overflow-x: hidden;
 	  position: absolute;
 	  top: 100%;
