--- a/template/pwa/pages/choix.html
+++ b/template/pwa/pages/choix.html
@@ -51,8 +51,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<div class="clear"></div>
 				</div>
 				
-				<div class="header">
-					<br>
+				<div style="padding-top: 2%;" class="header">
+					
 					<h1>SELECTIONNER VOTRE LIEU DE DEPART</h1>
 					
 					<a href="map.html"><input type="button" value="PARIS 1"></a>
