--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -25,7 +25,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="white"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="images/marker-blanc.png" />
+<link rel="icon" type="image/png" href="images/favicon.png" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="apple-touch-icon" href="images/hello-icon-152.png">
 <meta name="theme-color" content="white"/>
