--- a/template/pwa/pages/loc.html
+++ b/template/pwa/pages/loc.html
@@ -24,7 +24,7 @@
 
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
+          navigator.geolocation.watchPosition(function(position) {
             var pos = {
               lat: position.coords.latitude,
               lng: position.coords.longitude
@@ -33,13 +33,40 @@
         var marker = new google.maps.Marker({
           position: pos,
           map: map,
-          title: 'Hello World!',
+          title: '',
           
         });
+        // <----------------------------------------------------------------------------->
+        function autoUpdate() {
+  navigator.geolocation.getCurrentPosition(function(position) { 
+    var newPoint = new google.maps.LatLng(position.coords.latitude,
+                                          position.coords.longitude);
+ 
+    if (marker) {
+      // Si le marqueur existe déjà, je le déplace simplement
+      marker.setPosition(newPoint);
+    }
+    else {
+      // Si le marqueur n'existe pas, je le créé
+      marker = new google.maps.Marker({
+        position: newPoint,
+        map: map
+      });
+    }
+ 
+    // Je centre la carte sur ma nouvelle position
+    map.setCenter(newPoint);
+  });
+ 
+  // J'appelle ma fonction autoUpdate() toutes les 5 secondes
+  setTimeout(autoUpdate, 5000);
+}
+ 
+autoUpdate();
+ 
+        // <----------------------------------------------------------------------------->
 
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Location found.');
-            infoWindow.open(map);
+            
             map.setCenter(pos);
           }, function() {
             handleLocationError(true, infoWindow, map.getCenter());
