--- a/template/pwa/pages/loc.html
+++ b/template/pwa/pages/loc.html
@@ -34,6 +34,7 @@
           position: pos,
           map: map,
           title: '',
+          icon: '../images/icon-bus.png',
           
         });
         // <----------------------------------------------------------------------------->
@@ -50,7 +51,8 @@
       // Si le marqueur n'existe pas, je le créé
       marker = new google.maps.Marker({
         position: newPoint,
-        map: map
+        map: map,
+        
       });
     }
  
