--- a/template/pwa/pages/loc.html
+++ b/template/pwa/pages/loc.html
@@ -60,8 +60,8 @@
     map.setCenter(newPoint);
   });
  
-  // J'appelle ma fonction autoUpdate() toutes les 5 secondes
-  setTimeout(autoUpdate, 5000);
+  // J'appelle ma fonction autoUpdate() toutes les 1 seconde
+  setTimeout(autoUpdate, 1000);
 }
  
 autoUpdate();
