--- a/template/pwa/pages/loc.html
+++ b/template/pwa/pages/loc.html
@@ -15,7 +15,15 @@
     <div id="map"></div>
     <script>
       var map, infoWindow;
-    
+      var myStyles =[
+    {
+        featureType: "poi",
+        elementType: "labels",
+        stylers: [
+              { visibility: "off" }
+        ]
+    }
+];
       
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
@@ -26,7 +34,7 @@
           disableDefaultUI: true,
           draggable : false,
           scrollwheel: false,
-          
+          styles: myStyles,
           
         });
         
