--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -61,7 +61,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<form action="https://xelafi.github.io/vehicule_culturel/template/pwa/pages/choix.html" method="post">
 						<input type="text" id="name" name="user_name">
 						<br>
-						<input type="Submit" value="Valider">
+						<input type="Submit" value="Valider" required>
 					</form>
 					
 				</div>
