--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -59,9 +59,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1>
 				
 					<form action="https://xelafi.github.io/vehicule_culturel/template/pwa/pages/choix.html" method="post">
-						<input type="text" id="name" name="user_name">
+						<input type="text" id="name" name="user_name" required>
 						<br>
-						<input type="Submit" value="Valider" required>
+						<input type="Submit" value="Valider" >
 					</form>
 					
 				</div>
