--- a/template/pwa/pages/choix2.html
+++ b/template/pwa/pages/choix2.html
@@ -54,18 +54,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<div style="padding-top: 2%;" class="header">
 					
 					<h1>SELECTIONNER VOTRE LIEU DE DEPART</h1>
-					
-					<a href="map.html"><input type="button" value="PARIS 1"></a>
-					<a href="map.html"><input type="button" value="PARIS 2"></a>
-					<a href="map.html"><input type="button" value="PARIS 3"></a>
-					<br>
-					<a href="map.html"><input type="button" value="PARIS 4"></a>
-					<a href="map.html"><input type="button" value="PARIS 5"></a>
-					<a href="map.html"><input type="button" value="PARIS 6"></a>
-					<br>
-					<a href="map.html"><input type="button" value="PARIS 7"></a>
-					<a href="map.html"><input type="button" value="PARIS 8"></a>
-					<a href="map.html"><input type="button" value="PARIS 9"></a>
+					<br><br><br>
+					<img src="../images/paris.png" width="50%" height="50%" alt="Orientation" border="0" usemap="#panneaux" />
 				</div>
 			</div>
    
