--- a/template/pwa/pages/choix2.html
+++ b/template/pwa/pages/choix2.html
@@ -55,7 +55,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					
 					<h1>SELECTIONNER VOTRE LIEU DE DEPART</h1>
 					<br><br><br>
-					<img src="../images/paris.png" width="50%" height="50%" alt="Orientation" border="0" usemap="#panneaux" />
+					<nav>
+						<img src="../images/paris.png" alt="Orientation" border="0" usemap="#panneaux" />
+						<a href="map.html">leffnn</a>
+					</nav>
 				</div>
 			</div>
    
