--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -58,7 +58,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<img src="images/marker-blanc.png" alt=""  width="19%" />
 					<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1>
 				
-					<form action="pages/choix.html" method="get">
+					<form action="pages/choix2.html" method="get">
 						<input type="text" id="name" name="user_name" required>
 						<br>
 						<input type="Submit" value="Valider" >
