--- a/template/pwa/pages/map.html
+++ b/template/pwa/pages/map.html
@@ -1,66 +1,64 @@
 
 <!DOCTYPE HTML>
 <html lang="fr">
-<head>
-<title>ESCAPE-C</title>
-<!-- Meta tag Keywords -->
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Wonder Coming Soon Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Meta tag Keywords -->
+	<head>
+		<title>ESCAPE-C</title>
+		<!-- Meta tag Keywords -->
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="keywords" content="Wonder Coming Soon Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
+		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
+		function hideURLbar(){ window.scrollTo(0,1); } </script>
+		<!-- Meta tag Keywords -->
 
-<!-- css files -->
-<link rel="stylesheet" href="../css/css_map.css" type="text/css" media="all" /> <!-- Style-CSS --> 
-<link rel="stylesheet" href="../css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
-<link href="../css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
-<link rel="stylesheet" href="../css/jquery.countdown.css" /><!-- //countdown css -->
-<!-- //css files -->
+		<!-- css files -->
+		<link rel="stylesheet" href="../css/css_map.css" type="text/css" media="all" /> <!-- Style-CSS --> 
+		<link rel="stylesheet" href="../css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
+		<link href="../css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
+		<link rel="stylesheet" href="../css/jquery.countdown.css" /><!-- //countdown css -->
+		<!-- //css files -->
 
-<link rel="manifest" href="../manifest.json">
-<meta name="theme-color" content="white"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="manifest" href="../manifest.json">
+		<meta name="theme-color" content="white"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
-<link rel="apple-touch-icon" href="../images/hello-icon-152.png">
-<meta name="theme-color" content="white"/>
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-mobile-web-app-title" content="Hello World">
-<meta name="msapplication-TileImage" content="../images/hello-icon-144.png">
-<meta name="msapplication-TileColor" content="#FFFFFF">
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="../images/hello-icon-152.png">
+		<meta name="theme-color" content="white"/>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="Hello World">
+		<meta name="msapplication-TileImage" content="../images/hello-icon-144.png">
+		<meta name="msapplication-TileColor" content="#FFFFFF">
 
-<!-- google fonts -->
-<link href="//fonts.googleapis.com/css?family=Cinzel:400,700,900&amp;subset=latin-ext" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
-<!-- //google fonts -->
+		<!-- google fonts -->
+		<link href="//fonts.googleapis.com/css?family=Cinzel:400,700,900&amp;subset=latin-ext" rel="stylesheet">
+		<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
+		<!-- //google fonts -->
 
-</head>
-<body>
-
-	<header role="header">
-		<nav class="menu" role="navigation">
-			<div class="m-left">
-				<h1 class="logo">
-					
-				</h1>
-			</div>
-			<div class="m-center">
-				<h1>SCORE : X POINT(S)</h1>
-			</div>
-			<div class="m-right">
-				<a href="../index.html"><input type="button" value="LIEU D'ARRIVER"></a>
-			</div>
-		</nav>
-	</header>
-	<div id="map">
-		<object type="text/html" data="loc.html" width="100%" height="100%" ></object>
-	</div>
-	<!-- js -->
-	<script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
-	<!-- //js -->
-	<script src="../js/main.js"></script>
-</body>
+	</head>
+	<body>
+		<header role="header">
+			<nav class="menu" role="navigation">
+				<div class="m-left">
+					<h1 class="logo">
+					</h1>
+				</div>
+				<div class="m-center">
+					<h1>SCORE : X POINT(S)</h1>
+				</div>
+				<div class="m-right">
+					<a href="../index.html"><input type="button" value="LIEU D'ARRIVEE"></a>
+				</div>
+			</nav>
+		</header>
+		<div id="map">
+			<object type="text/html" data="loc.html" width="100%" height="100%" ></object>
+		</div>
+		<!-- js -->
+		<script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
+		<!-- //js -->
+		<script src="../js/main.js"></script>
+	</body>
 </html>
