--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -1,82 +1,74 @@
-<!--Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE HTML>
 <html lang="en">
-<head>
-<title>ESCAPE-C</title>
-<!-- Meta tag Keywords -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Wonder Coming Soon Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Meta tag Keywords -->
+	<head>
+		<title>ESCAPE-C</title>
+		<!-- Meta tag Keywords -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="keywords" content="Wonder Coming Soon Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
+		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
+		function hideURLbar(){ window.scrollTo(0,1); } </script>
+		<!-- Meta tag Keywords -->
 
-<!-- css files -->
-<link rel="stylesheet" href="css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
-<link rel="stylesheet" href="css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
-<link href="css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
-<link rel="stylesheet" href="css/jquery.countdown.css" /><!-- //countdown css -->
-<!-- //css files -->
+		<!-- css files -->
+		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
+		<link rel="stylesheet" href="css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
+		<link href="css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
+		<link rel="stylesheet" href="css/jquery.countdown.css" /><!-- //countdown css -->
+		<!-- //css files -->
 
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="white"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="images/favicon.png" />
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
-<link rel="apple-touch-icon" href="images/hello-icon-152.png">
-<meta name="theme-color" content="white"/>
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-mobile-web-app-title" content="Hello World">
-<meta name="msapplication-TileImage" content="images/hello-icon-144.png">
-<meta name="msapplication-TileColor" content="#FFFFFF">
+		<link rel="manifest" href="manifest.json">
+		<meta name="theme-color" content="white"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/png" href="images/favicon.png" />
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="images/hello-icon-152.png">
+		<meta name="theme-color" content="white"/>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="Hello World">
+		<meta name="msapplication-TileImage" content="images/hello-icon-144.png">
+		<meta name="msapplication-TileColor" content="#FFFFFF">
 
-<!-- google fonts -->
-<link href="//fonts.googleapis.com/css?family=Cinzel:400,700,900&amp;subset=latin-ext" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
-<!-- //google fonts -->
+		<!-- google fonts -->
+		<link href="//fonts.googleapis.com/css?family=Cinzel:400,700,900&amp;subset=latin-ext" rel="stylesheet">
+		<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
+		<!-- //google fonts -->
 
-</head>
-<body>
+	</head>
+	<body>
 
-<!-- main -->
+		<!-- main -->
 
-			<div class="main">
-				<div class="logo-header">
-					<div class="logo">
-						<a href="#">ESCAPE-C</a>
-					</div>
-					
-					<div class="clear"></div>
+		<div class="main">
+			<div class="logo-header">
+				<div class="logo">
+					<a href="#">ESCAPE-C</a>
 				</div>
-				
-				<div class="header">
-					<img src="images/marker-blanc.png" alt=""  width="19%" />
-					<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1>
-				
-					<form action="pages/choix2.html" method="get">
-						<input type="text" id="name" name="user_name" required>
-						<br>
-						<input type="Submit" value="Valider" >
-					</form>
-					
+						
+				<div class="clear">
 				</div>
-				
 			</div>
-    
-<!-- //main-->
+					
+			<div class="header">
+				<img src="images/marker-blanc.png" alt=""  width="19%" />
+				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1>
+					
+				<form action="pages/choix2.html" method="get">
+					<input type="text" id="name" name="user_name" required>
+					<br>
+					<input type="Submit" value="Valider" >
+				</form>
+						
+			</div>
+					
+		</div>
+		<!-- //main-->
 
-<!-- js -->
-<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-<!-- //js -->
-
-
-
-
-<script src="js/main.js"></script>
-</body>
+		<!-- js -->
+		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+		<!-- //js -->
+		<script src="js/main.js"></script>
+	</body>
 </html>
