--- a/template/pwa/pages/loc.html
+++ b/template/pwa/pages/loc.html
@@ -1,113 +1,104 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Geolocation</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="../css/css_map.css" type="text/css" media="all" /> <!-- Style-CSS -->
-    <meta charset="utf-8">
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-     
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
-    <script>
-      var map, infoWindow;
-      var myStyles =[
-    {
-        featureType: "poi",
-        elementType: "labels",
-        stylers: [
-              { visibility: "off" }
-        ]
-    }
-];
-      
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 18,
-          maxZoom: 18,
-          minZoom : 18,
-          disableDefaultUI: true,
-          draggable : false,
-          scrollwheel: false,
-          styles: myStyles,
-          
-        });
-        
-        infoWindow = new google.maps.InfoWindow;
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.watchPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
-
-        var marker = new google.maps.Marker({
-          position: pos,
-          map: map,
-          title: '',
-          icon: '../images/icon-bus.png',
-          
-        });
-        // <----------------------------------------------------------------------------->
-        function autoUpdate() {
-  navigator.geolocation.getCurrentPosition(function(position) { 
-    var newPoint = new google.maps.LatLng(position.coords.latitude,
-                                          position.coords.longitude);
- 
-    if (marker) {
-      // Si le marqueur existe déjà, je le déplace simplement
-      marker.setPosition(newPoint);
-    }
-    else {
-      // Si le marqueur n'existe pas, je le créé
-      marker = new google.maps.Marker({
-        position: newPoint,
-        map: map,
-        
-      });
-    }
- 
-    // Je centre la carte sur ma nouvelle position
-    map.setCenter(newPoint);
-  });
- 
-  // J'appelle ma fonction autoUpdate() toutes les 1 seconde
-  setTimeout(autoUpdate, 1000);
-}
- 
-autoUpdate();
- 
-        // <----------------------------------------------------------------------------->
-
-            
-            map.setCenter(pos);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-    
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
+  <html>
+    <head>
+      <title>Geolocation</title>
+      <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+      <link rel="stylesheet" href="../css/css_map.css" type="text/css" media="all" /> <!-- Style-CSS -->
+      <meta charset="utf-8">
+    </head>
+    <body>
+      <div id="map">
+      </div>
+      <script>
+        var map, infoWindow;
+        var myStyles =[
+        {
+          featureType: "poi",
+          elementType: "labels",
+          stylers: [
+          { visibility: "off" }
+          ]
         }
-      }
+        ];
+      
+        function initMap() {
+          map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: -34.397, lng: 150.644},
+            zoom: 18,
+            maxZoom: 18,
+            minZoom : 18,
+            disableDefaultUI: true,
+            draggable : false,
+            scrollwheel: false,
+            styles: myStyles,  
+          });
+        
+          infoWindow = new google.maps.InfoWindow;
+          // Try HTML5 geolocation.
+          if (navigator.geolocation) {
+            navigator.geolocation.watchPosition(function(position) {
+              var pos = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude
+              };
 
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvgE12Re3UeundWgP23srDEVh-WrUs3bM&callback=initMap">
-    </script>
-    <script src="../js/main.js"></script>
-  </body>
-</html>
+              var marker = new google.maps.Marker({
+                position: pos,
+                map: map,
+                title: '',
+                icon: '../images/icon-bus.png', 
+              });
+              // <----------------------------------------------------------------------------->
+              function autoUpdate() {
+                navigator.geolocation.getCurrentPosition(function(position) { 
+                  var newPoint = new google.maps.LatLng(position.coords.latitude,position.coords.longitude);
+ 
+                  if (marker) {
+                    // Si le marqueur existe déjà, je le déplace simplement
+                    marker.setPosition(newPoint);
+                  }
+                  else {
+                    // Si le marqueur n'existe pas, je le créé
+                    marker = new google.maps.Marker({
+                      position: newPoint,
+                      map: map,
+                    });
+                  }
+ 
+                  // Je centre la carte sur ma nouvelle position
+                  map.setCenter(newPoint);
+                });
+ 
+                // J'appelle ma fonction autoUpdate() toutes les 1 seconde
+                setTimeout(autoUpdate, 1000);
+              }
+ 
+              autoUpdate();
+ 
+              // <----------------------------------------------------------------------------->
+
+              map.setCenter(pos);
+            }, 
+            function() {
+              handleLocationError(true, infoWindow, map.getCenter());
+            });
+    
+          } else {
+            // Browser doesn't support Geolocation
+            handleLocationError(false, infoWindow, map.getCenter());
+          }
+        }
+
+        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+          infoWindow.setPosition(pos);
+          infoWindow.setContent(browserHasGeolocation ?
+           'Error: The Geolocation service failed.' :
+            'Error: Your browser doesn\'t support geolocation.');
+          infoWindow.open(map);
+        }
+      </script>
+
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvgE12Re3UeundWgP23srDEVh-WrUs3bM&callback=initMap"></script>
+      <script src="../js/main.js"></script>
+    </body>
+  </html>
