--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -78,7 +78,7 @@ a:hover{
 /*--main--*/
 /*--header start here--*/
 body {
-    background-image: url("../images/Escape_game.png");
+    background-image: url("../images/Escape_game2-2.png");
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
