--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -490,3 +490,18 @@ input[type="email"] {
     flex-grow: 1;
     width: 100%;
 }
+
+.bv1 {
+    text-align:center;
+    width: 96%;
+    margin-top: 12%;
+    
+
+    
+}
+
+.bv2 {
+    width: 80%;
+    margin-left: 20%;
+}
+
