--- a/template/pwa/pages/equipe.html
+++ b/template/pwa/pages/equipe.html
@@ -42,13 +42,26 @@
 		<!-- main -->
 
 		<div class="main">
-			<div class="bv1" >
-                <marquee scrollamount="100" behavior="slide" direction="right"  ><img src="images/bv-1.png" alt=""  width="65%" style="text-align:center"/></marquee>
-             
-            </div>
-            <div class="bv2">
-                <marquee scrollamount="100" behavior="slide" direction="left"  ><img src="images/bv2-1.png" alt=""  width="65%" style="text-align:center"/></marquee>
-            </div>
+			<div class="logo-header">
+				<div class="logo">
+					<a href="#">ESCAPE-C</a>
+				</div>
+						
+				<div class="clear">
+				</div>
+			</div>
+					
+			<div class="header">
+				<img src="images/marker-blanc.png" alt=""  width="19%" />
+				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1>
+					
+				<form action="pages/choix2.html" method="get">
+					<input type="text" id="name" name="user_name" required>
+					<br>
+					<input type="Submit" value="Valider" >
+				</form>
+						
+			</div>
 					
 		</div>
 		<!-- //main-->
