--- a/template/pwa/index.html
+++ b/template/pwa/index.html
@@ -51,7 +51,7 @@
                 
             </div>
             <div class="next">
-                <a href="index.html"><input type="button" value="Continuer"></a>
+                <a href="pages/equipe.html"><input type="button" value="Continuer"></a>
             </div>
 		</div>
 		<!-- //main-->
