--- a/template/pwa/pages/equipe.html
+++ b/template/pwa/pages/equipe.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>ESCAPE-C</title>
 		<!-- Meta tag Keywords -->
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="Wonder Coming Soon Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
@@ -12,23 +13,23 @@
 		<!-- Meta tag Keywords -->
 
 		<!-- css files -->
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
-		<link rel="stylesheet" href="css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
-		<link href="css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
-		<link rel="stylesheet" href="css/jquery.countdown.css" /><!-- //countdown css -->
+		<link rel="stylesheet" href="../css/style.css" type="text/css" media="all" /> <!-- Style-CSS --> 
+		<link rel="stylesheet" href="../css/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
+		<link href="../css/popup-box.css" rel="stylesheet" type="text/css" media="all" /><!-- //popup css -->
+		<link rel="stylesheet" href="/s/jquery.countdown.css" /><!-- //countdown css -->
 		<!-- //css files -->
 
-		<link rel="manifest" href="manifest.json">
+		<link rel="manifest" href="../manifest.json">
 		<meta name="theme-color" content="white"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/png" href="images/favicon.png" />
+
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="images/hello-icon-152.png">
+		<link rel="apple-touch-icon" href="../images/hello-icon-152.png">
 		<meta name="theme-color" content="white"/>
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="apple-mobile-web-app-title" content="Hello World">
-		<meta name="msapplication-TileImage" content="images/hello-icon-144.png">
+		<meta name="msapplication-TileImage" content="../images/hello-icon-144.png">
 		<meta name="msapplication-TileColor" content="#FFFFFF">
 
 		<!-- google fonts -->
@@ -44,7 +45,7 @@
 		<div class="main">
 			<div class="logo-header">
 				<div class="logo">
-					<a href="#">ESCAPE-C</a>
+					
 				</div>
 						
 				<div class="clear">
@@ -52,12 +53,13 @@
 			</div>
 					
 			<div class="header">
-				<img src="images/marker-blanc.png" alt=""  width="19%" />
-				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1>
+				<br><br>
+				<img src="../images/marker-blanc.png" alt=""  width="19%" /><br><br>
+				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1><br>
 					
 				<form action="pages/choix2.html" method="get">
 					<input type="text" id="name" name="user_name" required>
-					<br>
+					<br><br>
 					<input type="Submit" value="Valider" >
 				</form>
 						
