--- a/template/pwa/css/css_map.css
+++ b/template/pwa/css/css_map.css
@@ -37,7 +37,7 @@ body,html{
 	padding:0;
 	margin:0; 
     font-size: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex; flex-direction: column; min-height: 100vh;
 }  
  @font-face {
@@ -83,8 +83,22 @@ body {
 .menu{
     background:black;
 	width: 100%;
-    height: 90px;
+    height: 8%;
     line-height: 66px;
+    display: flex;
+    align-items: center;
+	
+}
+
+.route{
+    background-image: url("../images/route.jpg");
+ background-size: contain;
+	width: 100%;
+    height: 8%;
+    line-height: 66px;
+    display: flex;
+    
+    
 	
 }
 
@@ -94,9 +108,9 @@ body {
 }
 
 .logo{
-    width: 70px;
+    width: 55px;
     vertical-align: middle;
-    height: 85px;
+    height: 65px;
     background-image: url("../images/marker-blanc.png");
     background-size: cover;
     -webkit-background-size: cover;
@@ -137,7 +151,7 @@ body {
 
 h1 {
     color: #EAEAEA;
-    font-size: 3vw;
+    font-size: 2vw;
     font-weight: 300;
     text-transform: uppercase;
     word-spacing: 10px;
@@ -521,3 +535,8 @@ input[type="email"] {
 	color: #888;
 }
 
+.m-link{
+    text-decoration: none;
+    color: white;
+    font-size: 1.3vw;
+}
