--- a/template/pwa/css/style.css
+++ b/template/pwa/css/style.css
@@ -92,7 +92,17 @@ body {
 .main{
 	
 	flex-grow: 1;
-	max-height: 100%;
+    max-height: 100%;
+    
+}
+
+.all{
+	margin-top: 10%;
+	flex-grow: 1;
+    max-height: 100%;
+    text-align: center;
+    
+    
 }
 
 .logo a{
@@ -171,6 +181,17 @@ ul.social li .fa-google-plus:hover {
  h1 {
     color: #EAEAEA;
     font-size: 3vw;
+    font-weight: 300;
+    text-transform: uppercase;
+    word-spacing: 10px;
+   font-family: 'Azonix';
+   text-shadow: 0 0 0.2em #000000, 0 0 0.2em #000000,
+        0 0 0.2em #000000;
+}
+
+h2 {
+    color: #EAEAEA;
+    font-size: 2vw;
     font-weight: 300;
     text-transform: uppercase;
     word-spacing: 10px;
@@ -506,3 +527,55 @@ input[type="email"] {
 .next {
     text-align: center;
 }
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+
+}
+.menu{
+    margin-top: 2%;
+    background:rgb(255, 255, 255);
+	width: 100%;
+    height: 8%;
+    line-height: 66px;
+    display: flex;
+    align-items: center;
+    
+}
+
+.m-left{
+    float: left;
+    width: 25%;
+}
+
+.m-center{
+    float: left;
+    width: 50%;
+    text-align: center;
+    padding-top: 15px;
+}
+
+.m-right{
+    float: right;
+    width: 24%;
+    text-align: right;
+    margin-right: 1%;
+    padding-top: 10px;
+    background: red;
+}
+.logo{
+    width: 55px;
+    vertical-align: middle;
+    height: 65px;
+    background-image: url("../images/marker-blanc.png");
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+	margin: 0;
+	padding: 0;
+}
+
