--- a/template/pwa/pages/map.html
+++ b/template/pwa/pages/map.html
@@ -39,7 +39,7 @@
 
 	</head>
 	<body>
-		<header role="header">
+		
 			<nav class="menu" role="navigation">
 				<div class="m-left">
 					<h1 class="logo">
@@ -49,10 +49,13 @@
 					<h1>SCORE : X POINT(S)</h1>
 				</div>
 				<div class="m-right">
-					<a href="../index.html"><input type="button" value="LIEU D'ARRIVEE"></a>
+					<a href="map.html" class="m-link">Lieu d'arivée</a>
 				</div>
 			</nav>
-		</header>
+	
+		<div class="route">
+			<img src="../images/bus.png" alt=""  height="90%" />
+		</div>
 		<div id="map">
 			<object type="text/html" data="loc.html" width="100%" height="100%" ></object>
 		</div>
